--- a/web/backoffice/package.json
+++ b/web/backoffice/package.json
@@ -2,24 +2,23 @@
   "name": "plebeianmarket-web",
   "version": "0.0.1",
   "devDependencies": {
-    "@sveltejs/adapter-node": "^1.2.0",
-    "@sveltejs/kit": "^1.27.0",
+    "@sveltejs/adapter-node": "^2.0.0",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "autoprefixer": "^10.4.16",
     "btc2fiat": "*",
-    "daisyui": "^3.9.3",
-    "eslint": "^8.52.0",
-    "eslint-plugin-svelte3": "4.x",
+    "daisyui": "^4.4.23",
+    "eslint": "^8.56.0",
+    "eslint-plugin-svelte": "^2.35.1",
     "nostr-tools": "^1.13.1",
     "npm-run-all": "4.x",
     "postcss": "^8.4.31",
-    "svelte": "3.x",
-    "svelte-check": "^3.5.2",
-    "svelte-meta-tags": "^2.6.5",
+    "svelte": "^4.0.0",
+    "svelte-check": "^3.6.2",
     "svelte-toasts": "1.x",
-    "svelte-typewriter": "^3.1.6",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^4.9.5",
-    "vite": "^4.5.0"
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.0.0",
+    "vite": "^5.0.10"
   },
   "type": "module",
   "scripts": {
@@ -34,6 +33,7 @@
     "lint": "eslint --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
     "light-bolt11-decoder": "^3.0.0"
   }
 }
