--- a/web/frontoffice/package.json
+++ b/web/frontoffice/package.json
@@ -2,23 +2,23 @@
   "name": "plebeianmarket-web",
   "version": "0.0.1",
   "devDependencies": {
-    "@sveltejs/kit": "^1.27.6",
+    "@sveltejs/kit": "^2.0.6",
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.16",
-    "daisyui": "^3.9.4",
-    "eslint": "^8.55.0",
-    "eslint-plugin-svelte3": "4.x",
+    "daisyui": "^4.4.23",
+    "eslint": "^8.56.0",
+    "eslint-plugin-svelte": "^2.35.1",
     "nostr-tools": "^1.13.1",
     "npm-run-all": "4.x",
     "postcss": "^8.4.32",
-    "svelte": "^3.59.2",
+    "svelte": "^4.2.8",
     "svelte-check": "^3.6.2",
-    "svelte-meta-tags": "^2.8.0",
+    "svelte-meta-tags": "^3.1.0",
     "svelte-toasts": "1.x",
     "svelte-typewriter": "^3.1.6",
-    "tailwindcss": "^3.3.6",
-    "typescript": "^4.9.5",
-    "vite": "^4.5.1"
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.0.0",
+    "vite": "^5.0.10"
   },
   "type": "module",
   "scripts": {
@@ -34,18 +34,22 @@
   },
   "dependencies": {
     "@jhubbardsf/svelte-sortablejs": "^1.1.0",
-    "@prosemirror-adapter/svelte": "^0.2.5",
-    "@sveltejs/adapter-static": "^2.0.3",
+    "@prosemirror-adapter/svelte": "^0.2.6",
+    "@sveltejs/adapter-static": "^3.0.1",
+    "@sveltejs/vite-plugin-svelte": "^3.0.1",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
     "bech32": "^2.0.0",
     "buffer": "^6.0.3",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.1",
     "light-bolt11-decoder": "^3.0.0",
     "prosemirror-example-setup": "^1.2.2",
     "prosemirror-keymap": "^1.2.2",
-    "prosemirror-markdown": "^1.11.2",
+    "prosemirror-markdown": "^1.12.0",
     "prosemirror-schema-basic": "^1.2.2",
-    "prosemirror-view": "^1.32.4",
+    "prosemirror-view": "^1.32.7",
     "svelte-lazy-loader": "^1.0.0",
-    "svelte-markdown": "^0.2.3",
+    "svelte-markdown": "^0.4.0",
     "svelte-qr": "^1.0.0",
     "tw-elements": "^1.1.0"
   }
