--- a/.env.prod
+++ b/.env.prod
@@ -1,11 +1,12 @@
 ENV=prod
 FLASK_APP=main
 LOG_LEVEL=INFO
-LOG_FILENAME=/state/pm.log
-WWW_BASE_URL=https://plebeian.market
-API_BASE_URL=https://plebeian.market
 BIRDWATCHER_BASE_URL=http://birdwatcher:6000
+LNDHUB_URL=https://ln.getalby.com
+LOG_FILENAME=/state/pm.log
 PROCESSED_EVENT_IDS_FILENAME=/state/processed_event_ids.txt
 VERIFIED_EXTERNAL_IDENTITIES_FILENAME=/state/verified_external_identities.txt
 GECKODRIVER_BINARY=/app/geckodriver
-LNDHUB_URL=https://ln.getalby.com
+DOMAIN_NAME=plebeian.market
+WWW_BASE_URL=https://plebeian.market
+API_BASE_URL=https://plebeian.market
