--- a/.env.staging
+++ b/.env.staging
@@ -9,3 +9,4 @@ PROCESSED_EVENT_IDS_FILENAME=/state/processed_event_ids.txt
 VERIFIED_EXTERNAL_IDENTITIES_FILENAME=/state/verified_external_identities.txt
 GECKODRIVER_BINARY=/app/geckodriver
 LNDHUB_URL=https://ln.getalby.com
+DOMAIN_NAME=staging.plebeian.market
