--- a/web/shared/package.json
+++ b/web/shared/package.json
@@ -26,9 +26,9 @@
 		"svelte": "^3.59.2"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.1",
-		"@sveltejs/kit": "^2.0.6",
-		"@sveltejs/package": "^2.2.4",
+		"@sveltejs/adapter-auto": "^3.1.0",
+		"@sveltejs/kit": "^2.3.1",
+		"@sveltejs/package": "^2.2.5",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@typescript-eslint/eslint-plugin": "^6.16.0",
 		"@typescript-eslint/parser": "^6.16.0",
@@ -39,14 +39,14 @@
 		"svelte-check": "^3.6.2",
 		"tslib": "^2.6.2",
 		"typescript": "^5.0.0",
-		"vite": "^5.0.10"
+		"vite": "^5.0.11"
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"type": "module",
 	"dependencies": {
 		"btc2fiat": "^0.1.23",
-		"isomorphic-dompurify": "^2.2.0",
+		"dompurify": "^3.0.8",
 		"light-bolt11-decoder": "^3.0.0",
 		"nostr-tools": "^1.13.1",
 		"uuid": "^9.0.1"
