--- a/.env.prod
+++ b/.env.prod
@@ -1,6 +1,7 @@
 ENV=prod
 FLASK_APP=main
 LOG_LEVEL=INFO
+USE_S3=1
 BIRDWATCHER_BASE_URL=http://birdwatcher:6000
 LNDHUB_URL=https://ln.getalby.com
 LOG_FILENAME=/state/pm.log
