Serve media using nginx.

--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -40,6 +40,12 @@ server {
         proxy_redirect off;
     }
 
+    location /media {
+        add_header Access-Control-Allow-Origin *;
+        root /media;
+        try_files $uri;
+    }
+
     location / {
         add_header Access-Control-Allow-Origin *;
         root /buyer-app;
