--- a/docker-compose.staging.yml
+++ b/docker-compose.staging.yml
@@ -52,6 +52,7 @@ services:
       - proxy
     volumes:
       - "buyer-app-static-content:/buyer-app"
+      - "/home/www/plebeian-market-state/media:/media"
   finalize-auctions:
     env_file: .env.staging
     volumes:
