--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -43,7 +43,7 @@ server {
     location /media {
         add_header Access-Control-Allow-Origin *;
         root /media;
-        try_files $uri;
+        try_files $uri $uri/ /index.html;
     }
 
     location / {
