--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -41,9 +41,7 @@ server {
     }
 
     location /media {
-        add_header Access-Control-Allow-Origin *;
-        root /media;
-        try_files $uri $uri/ /index.html;
+        alias /media;
     }
 
     location / {
