Add ability to store media locally.

--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -40,6 +40,10 @@ server {
         proxy_redirect off;
     }
 
+    location /media {
+        alias /media/;
+    }
+
     location / {
         add_header Access-Control-Allow-Origin *;
         root /buyer-app;
