--- a/web/backoffice/.env.staging
+++ b/web/backoffice/.env.staging
@@ -1,2 +1,2 @@
-VITE_BASE_URL=https://staging.plebeian.market/
-VITE_API_BASE_URL=https://staging.plebeian.market/
+VITE_BASE_URL=$WWW_BASE_URL
+VITE_API_BASE_URL=$API_BASE_URL
