Switch Prosemirror for Lexical

--- a/web/frontoffice/package.json
+++ b/web/frontoffice/package.json
@@ -36,7 +36,6 @@
   "dependencies": {
     "@bowline/svelte-lexical": "^0.7.5",
     "@jhubbardsf/svelte-sortablejs": "^1.1.0",
-    "@prosemirror-adapter/svelte": "^0.2.6",
     "@sveltejs/adapter-static": "^3.0.1",
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^6.19.1",
@@ -44,12 +43,8 @@
     "buffer": "^6.0.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "lexical-minifier": "^1.0.0",
     "light-bolt11-decoder": "^3.0.0",
-    "prosemirror-example-setup": "^1.2.2",
-    "prosemirror-keymap": "^1.2.2",
-    "prosemirror-markdown": "^1.12.0",
-    "prosemirror-schema-basic": "^1.2.2",
-    "prosemirror-view": "^1.32.7",
     "svelte-lazy-loader": "^1.0.0",
     "svelte-markdown": "^0.4.1",
     "svelte-qr": "^1.0.0",
