--- a/web/frontoffice/package.json
+++ b/web/frontoffice/package.json
@@ -2,23 +2,24 @@
   "name": "plebeianmarket-web",
   "version": "0.0.1",
   "devDependencies": {
-    "@sveltejs/kit": "^2.3.2",
+    "@sveltejs/kit": "^2.4.3",
     "@tailwindcss/typography": "^0.5.10",
-    "autoprefixer": "^10.4.16",
+    "autoprefixer": "^10.4.17",
     "daisyui": "^4.6.0",
     "eslint": "^8.56.0",
     "eslint-plugin-svelte": "^2.35.1",
     "nostr-tools": "^1.13.1",
     "npm-run-all": "4.x",
     "postcss": "^8.4.33",
-    "svelte": "^4.2.8",
+    "svelte": "^4.2.9",
     "svelte-check": "^3.6.3",
+    "svelte-dnd-action": "^0.9.38",
     "svelte-meta-tags": "^3.1.0",
     "svelte-toasts": "1.x",
     "svelte-typewriter": "^3.1.6",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.0.0",
-    "vite": "^5.0.11"
+    "vite": "^5.0.12"
   },
   "type": "module",
   "scripts": {
@@ -33,21 +34,17 @@
     "lint": "eslint --ignore-path .gitignore ."
   },
   "dependencies": {
+    "@bowline/svelte-lexical": "^0.7.5",
     "@jhubbardsf/svelte-sortablejs": "^1.1.0",
-    "@prosemirror-adapter/svelte": "^0.2.6",
     "@sveltejs/adapter-static": "^3.0.1",
     "@sveltejs/vite-plugin-svelte": "^3.0.1",
-    "@typescript-eslint/eslint-plugin": "^6.18.1",
+    "@typescript-eslint/eslint-plugin": "^6.19.1",
     "bech32": "^2.0.0",
     "buffer": "^6.0.3",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "lexical-minifier": "^1.0.0",
     "light-bolt11-decoder": "^3.0.0",
-    "prosemirror-example-setup": "^1.2.2",
-    "prosemirror-keymap": "^1.2.2",
-    "prosemirror-markdown": "^1.12.0",
-    "prosemirror-schema-basic": "^1.2.2",
-    "prosemirror-view": "^1.32.7",
     "svelte-lazy-loader": "^1.0.0",
     "svelte-markdown": "^0.4.1",
     "svelte-qr": "^1.0.0",
