--- a/web/shared/package.json
+++ b/web/shared/package.json
@@ -23,32 +23,35 @@
 		"!dist/**/*.spec.*"
 	],
 	"peerDependencies": {
-		"svelte": "^3.59.2"
+		"svelte": "^4.2.9"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.1.0",
-		"@sveltejs/kit": "^2.3.2",
-		"@sveltejs/package": "^2.2.5",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
-		"@typescript-eslint/eslint-plugin": "^6.16.0",
-		"@typescript-eslint/parser": "^6.16.0",
+		"@sveltejs/adapter-auto": "^3.1.1",
+		"@sveltejs/kit": "^2.5.0",
+		"@sveltejs/package": "^2.2.6",
+		"@sveltejs/vite-plugin-svelte": "^3.0.2",
+		"@typescript-eslint/eslint-plugin": "^6.20.0",
+		"@typescript-eslint/parser": "^6.20.0",
 		"eslint": "^8.56.0",
 		"eslint-plugin-svelte": "^2.35.1",
 		"publint": "^0.2.7",
-		"svelte": "^4.0.0",
-		"svelte-check": "^3.6.2",
+		"svelte": "^4.2.9",
+		"svelte-check": "^3.6.3",
 		"tslib": "^2.6.2",
 		"typescript": "^5.0.0",
-		"vite": "^5.0.11"
+		"vite": "^5.0.12"
 	},
 	"svelte": "./dist/index.js",
 	"types": "./dist/index.d.ts",
 	"type": "module",
 	"dependencies": {
+		"@bowline/svelte-lexical": "^0.7.5",
 		"btc2fiat": "^0.1.23",
 		"dompurify": "^3.0.8",
+		"lexical-minifier": "^1.0.0",
 		"light-bolt11-decoder": "^3.0.0",
 		"nostr-tools": "^1.13.1",
+		"tw-elements": "^1.1.0",
 		"uuid": "^9.0.1"
 	}
 }
