Add postfix to our environment.

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -13,6 +13,9 @@ services:
         type: tmpfs
     ports:
       - "7777:7777"
+  smtp:
+    ports:
+     - "1587:587"
   api:
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:5000/api/status"]
