--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -48,6 +48,8 @@ services:
     depends_on:
       api: # this is because in dev & test mode, the api is the one initializing the database, on start
         condition: service_healthy
+      birdwatcher:
+        condition: service_healthy
     env_file: .env.dev
     volumes:
       - "./api:/app"
