--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -46,7 +46,7 @@ server {
 
     location / {
         add_header Access-Control-Allow-Origin *;
-        root /buyer-app;
+        root /front-office-app;
         index index.html;
         try_files $uri $uri/ /index.html;
     }
