Serve front office config from Nginx.

--- a/services/nginx/Dockerfile
+++ b/services/nginx/Dockerfile
@@ -1,6 +1,7 @@
 FROM nginx:1.25-alpine-slim
 
-RUN rm /etc/nginx/conf.d/default.conf
+RUN mkdir /front-office-config && rm /etc/nginx/conf.d/default.conf
+COPY ./web/frontoffice/static/config-pm.json /front-office-config/config.json
 COPY ./services/nginx/nginx.conf /etc/nginx/conf.d/nginx.conf
 
 EXPOSE 80
