--- a/services/nginx/nginx.conf
+++ b/services/nginx/nginx.conf
@@ -44,6 +44,10 @@ server {
         alias /media/;
     }
 
+    location /front-office-config {
+        alias /front-office-config/;
+    }
+
     location / {
         add_header Access-Control-Allow-Origin *;
         root /front-office-app;
