--- a/web/frontoffice/static/config-example.json
+++ b/web/frontoffice/static/config-example.json
@@ -3,5 +3,6 @@
     ""
   ],
   "homepage_banner_image": "",
-  "backend_present": false
+  "backend_present": false,
+  "market_square_channel_id": ""
 }
